--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,8 @@ android {
 }
 
 dependencies {
-    api fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
-    // implementation project(':py_lib')
+    // api fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+    implementation project(':py_lib')
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     testImplementation 'junit:junit:4.+'
